2007-09-04  Martin Lambers <marlam@marlam.de>

	* Update information in the AboutBox.

2007-09-03  Martin Lambers <marlam@marlam.de>

	* Allow to save/load parameter sets.
	* Use CVLTonemap instead of CVLToneMap internally.
	* Use different sets of postprocessing parameters for each tone
	mapping method.
	* Fix Gamma Slider.
	* Split controls for maximum absolute luminance into its own file,
	because all future tone mapping operators will need it. Improve the
	slider.

2007-08-31  Martin Lambers <marlam@marlam.de>

	* Initial public release.